# Stephenusselman.fileindexer

./: CMakeLists.txt  README.md
buiild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  file_indexer.sln  file_indexer.vcxproj  file_indexer.vcxproj.filters
include/: cli.hpp  file_record.hpp  index.hpp  index_file.hpp  index_io.hpp  query.hpp  scan.hpp
src/: cli.cpp  file_record.cpp  index.cpp  index_file.cpp  index_io.cpp  main.cpp  query.cpp  scan.cpp
